--- a/VRChat/04/1061204.html
+++ b/VRChat/04/1061204.html
@@ -77,10 +77,11 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "lunaticgrininds" data-product-category="127"
-        data-product-id="1061204" data-product-list="market_show"
-        data-product-price="100" data-tracking="detail_item">
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="lunaticgrininds" data-product-category=
+        "127" data-product-id="1061204" data-product-list=
+        "market_show" data-product-price="100" data-tracking=
+        "detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -103,17 +104,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -124,13 +125,13 @@
                             <img alt="Lunatic Grin Industries"
                             class="user-avatar at-item-summary"
                             src="https://booth.pximg.net/c/48x48/users/1430012/icon_image/993c1c35-43ea-4d1e-9f3b-98bc2d062032_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               Lunatic Grin Industries
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           3Dモデル「魔剣エンドピース」
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -219,18 +220,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1061204"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "3Dモデル「魔剣エンドピース」 | Lunatic Grin Industries"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1061204"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "3Dモデル「魔剣エンドピース」 | Lunatic Grin Industries"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1061204"
@@ -240,7 +240,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -260,8 +260,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             本作品はUnityでの利用を想定したunitypackage形式の3DCG刃物モデル、「魔剣エンドピース」です。
                             細部の調整やテクスチャの変更、Unity以外での使用にも対応出来るようにunitypackage以外にfbx形式も同梱しております。
                             本作品の使用上の問題や不満な点、改善の要望などフィードバックは
@@ -270,8 +270,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
